# Classroom

./: .flake8  .gitignore  LICENSE  README.md  index.md  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200812_1511.py  0002_auto_20200812_1913.py
class/: admin.py  apps.py  models.py  urls.py  views.py
class/migrations/: 0001_initial.py  0002_auto_20200722_0620.py
class/templates/class/: create.html  index.html  join.html  okay.html  upload.html
class/templates/registration/: register.html
classnote/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
classnote/migrations/: 0001_initial.py  0002_auto_20200812_1516.py  0002_auto_20200812_1840.py  0002_auto_20200813_1231.py  0002_auto_20201026_1306.py  0003_auto_20200813_1238.py  0003_classroom_identifier.py  0004_auto_20200812_1522.py  0004_delete_pswd.py  0005_auto_20200813_1252.py  0006_auto_20200813_1327.py  0007_auto_20200813_1328.py  0008_auto_20200829_0453.py  0008_auto_20200830_0552.py
classnote/templates/class/: base.html  create.html  edit_profile.html  index.html  join-done.html  join.html  join2.html  no.html  okay.html  profile.html  upload.html
classnote/templates/classnote/: base.html  class_join.html  classroom_form.html  create.html  index.html  join.html  okay.html  upload.html  userprofile_form.html
classroom/: db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
classroom/class/: admin.py  models.py  urls.py  views.py
classroom/classroom/: settings.py  urls.py
(+21 files in other folders)
