[tool.poetry]
name = "classroom"
version = "0.1.0"
description = ""
authors = ["Parth Pandya <parthpandyappp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
